started the batch api
